crates/parser/src/snapshots/parser__tests__parse_inline_ok@0015_application_expr_no_args.ath.snap
---
source: crates/parser/src/tests.rs
description: "(foo)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0015_application_expr_no_args.ath
---
APPLICATION_EXPR
  L_PAREN "("
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"

