crates/parser/src/snapshots/parser__tests__parse_inline_ok@0017_simple_list_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "[foo bar \"baz\"]\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0017_simple_list_expr.ath
---
LIST_EXPR
  L_BRACK "["
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
        WHITESPACE " "
  EXPR_PHRASE
    LITERAL_EXPR
      LITERAL
        STRING "\"baz\""
  R_BRACK "]"
  WHITESPACE "\n"

