crates/parser/src/snapshots/parser__tests__parse_inline_ok@0019_simple_or_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(|| foo bar true)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0019_simple_or_expr.ath
---
OR_EXPR
  L_PAREN "("
  PIPE2 "||"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "bar"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "true"
  R_PAREN ")"
  WHITESPACE "\n"

