crates/parser/src/snapshots/parser__tests__parse_inline_ok@0021_simple_and_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(&& foo bar true)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0021_simple_and_expr.ath
---
AND_EXPR
  L_PAREN "("
  AMP2 "&&"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "true"
  R_PAREN ")"
  WHITESPACE "\n"

