crates/parser/src/snapshots/parser__tests__parse_inline_ok@0023_simple_seq_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(seq foo bar baz)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0023_simple_seq_expr.ath
---
SEQ_EXPR
  L_PAREN "("
  SEQ_KW "seq"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "baz"
  R_PAREN ")"
  WHITESPACE "\n"

