crates/parser/src/snapshots/parser__tests__parse_inline_ok@0025_simple_cell_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "cell foo\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0025_simple_cell_expr.ath
---
CELL_EXPR
  CELL_KW "cell"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE "\n"

