crates/parser/src/snapshots/parser__tests__parse_inline_ok@0026_simple_set_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "set! foo bar\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0026_simple_set_expr.ath
---
SET_EXPR
  SETBANG_KW "set!"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE "\n"

