crates/parser/src/snapshots/parser__tests__parse_inline_ok@0028_simple_make_vector_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "make-vector foo bar\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0028_simple_make_vector_expr.ath
---
MAKE_VECTOR_EXPR
  MAKE_VECTOR_KW "make-vector"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE "\n"

